k8s/ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: prova
  labels:
    name: prova
